--- a/GemAccounts/GemAccounts.vbproj
+++ b/GemAccounts/GemAccounts.vbproj
@@ -348,6 +348,7 @@
     <Compile Include="Sale\FrmSale.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Settings.vb" />
     <Compile Include="TmpData.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
