--- a/GemAccounts/App.config
+++ b/GemAccounts/App.config
@@ -6,10 +6,12 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="ConnectionString" connectionString="Data Source=AJAYMAUNI;Initial Catalog=DIA_MASTER;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <!--<add name="ConnectionString" connectionString="Data Source=90-214-109-208;Initial Catalog=DIA_MASTER;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
+    <add name="ConnectionString" connectionString="Data Source=NIKUNJ;Initial Catalog=DIA_MASTER;Integrated Security=True"
+  providerName="System.Data.SqlClient" />
     <add name="GemAccounts.My.MySettings.DIA_MASTERConnectionString"
-      connectionString="Data Source=ajaymauni;Initial Catalog=DIA_MASTER;Integrated Security=True"
+      connectionString="Data Source=NIKUNJ;Initial Catalog=DIA_MASTER;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <applicationSettings>
