--- a/GemAccounts/GemAccounts.vbproj
+++ b/GemAccounts/GemAccounts.vbproj
@@ -190,6 +190,12 @@
     <Compile Include="Admin\FrmRapaportCredentials.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Admin\FrmUpdatePrices.Designer.vb">
+      <DependentUpon>FrmUpdatePrices.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\FrmUpdatePrices.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Admin\FrmUserPermission.Designer.vb">
       <DependentUpon>FrmUserPermission.vb</DependentUpon>
     </Compile>
@@ -607,6 +613,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Admin\FrmRapaportCredentials.resx">
       <DependentUpon>FrmRapaportCredentials.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin\FrmUpdatePrices.resx">
+      <DependentUpon>FrmUpdatePrices.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Admin\FrmUserPermission.resx">
       <DependentUpon>FrmUserPermission.vb</DependentUpon>
